<resources>
	<string name="app_name">Books</string>
	<string name="error_data_message">Error loading data from google books API</string>
	<string name="search">Search</string>
	<string name="no_search_data">Please Insert valid search</string>

	<string name="hint_title">Insert Title</string>
	<string name="hint_authors">Insert Author(s)</string>
	<string name="hint_publisher">Insert Publisher</string>
	<string name="hint_ISBN">Insert ISBN</string>
	<string name="advance_search">Advance Search</string>
</resources>
