<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".SearchActivity">

	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/etTitle"
			android:hint="@string/hint_title"
			android:layout_margin="@dimen/margin_search_actvity"/>
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/etAuthors"
			android:hint="@string/hint_authors"
			android:layout_margin="@dimen/margin_search_actvity"/>
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:hint="@string/hint_publisher"
			android:id="@+id/etPublisher"
			android:layout_margin="@dimen/margin_search_actvity"/>
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/etIsbn"
			android:hint="@string/hint_ISBN"
			android:layout_margin="@dimen/margin_search_actvity"/>
	<Button
			android:text="@string/search"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnSearh"
			android:layout_gravity="center"
			android:background="@drawable/shape"
			android:textSize="@dimen/search_button_text_size"
			android:textColor="@android:color/white"
			android:layout_margin="@dimen/margin_search_actvity"/>
</LinearLayout>